--- a/app/Resources/views/page_header.html.twig
+++ b/app/Resources/views/page_header.html.twig
@@ -11,7 +11,7 @@
                 <div class="form-group">
                     <div class="has-feedback">
                         <input id="search-coaster" type="search" class="form-control border-blue-600 border-lg"
-                               placeholder="Rechercher un coaster">
+                               placeholder="{{ 'app.header.search'|trans }}">
                         <div class="form-control-feedback">
                             <i class="icon-search4 text-size-small text-muted"></i>
                         </div>
