--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -95,6 +95,7 @@
     });
 </script>
 {% block javascripts %}{% endblock %}
+{% if app.environment != 'dev' %}
 <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -105,6 +106,7 @@
     ga('send', 'pageview');
 
 </script>
+{% endif %}
 </body>
 </html>
 
