quick add og tags

--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -177,6 +177,12 @@
 {% endblock %}
 
 {% block javascripts %}
+    {# to be refact #}
+    <meta property="og:title" content="Captain Coaster" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://captaincoaster.com/" />
+    <meta property="og:image" content="{{ asset('images/logo_big.png') }}" />
+
     <script type="text/javascript" src="{{ asset('js/plugins/timeago/jquery.timeago.js') }}"></script>
     <script type="text/javascript" src="{{ asset('js/plugins/timeago/jquery.timeago.fr.js') }}"></script>
     <script type="text/javascript">
