--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -49,7 +49,7 @@
                 </li>
             {% else %}
                 <li>
-                    <a href="{{ path('facebook_login') }}" data-popup="tooltip" title="Login">
+                    <a href="{{ path('hwi_oauth_connect') }}" data-popup="tooltip" title="Login">
                         <i class="icon-lock display-block"></i>
                     </a>
                 </li>
