--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -41,7 +41,7 @@
                                 <i class="icon-switch2"></i> <span>{{ 'sidebar.logout'|trans }}</span>
                             </a>
                         {% else %}
-                            <a href="{{ path('facebook_login') }}">
+                            <a href="{{ path('hwi_oauth_connect') }}">
                                 <i class="icon-lock"></i> <span>{{ 'sidebar.login'|trans }}</span>
                             </a>
                         {% endif %}
