--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
         <h6 class="alert-heading text-semibold">
             {{ 'index.header.title'|trans }}
         </h6>
-        {{ 'index.header.info'|trans({'%link_path%': path('facebook_login')})|raw }}
+        {{ 'index.header.info'|trans({'%link_path%': path('hwi_oauth_connect')})|raw }}
     </div>
     <!-- /info alert -->
     <div class="row">
