update design list

--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -39,7 +39,7 @@
     </ul>
     <a href="{{ path('liste_edit', {'id': liste.id}) }}">
         <button type="button" class="btn bg-teal-400 btn-labeled pull-right">
-            <b><i class="icon-reading"></i></b> {{ 'liste.update'|trans }}
+            <b><i class="icon-pencil3"></i></b> {{ 'liste.update'|trans }}
         </button>
     </a>
 {% endblock %}
