--- a/src/BddBundle/Resources/views/Liste/show.html.twig
+++ b/src/BddBundle/Resources/views/Liste/show.html.twig
@@ -37,9 +37,11 @@
             </li>
         {% endfor %}
     </ul>
-    <a href="{{ path('liste_edit', {'id': liste.id}) }}">
-        <button type="button" class="btn bg-teal-400 btn-labeled pull-right">
-            <b><i class="icon-pencil3"></i></b> {{ 'liste.update'|trans }}
-        </button>
-    </a>
+    {% if is_granted('edit', liste) %}
+        <a href="{{ path('liste_edit', {'id': liste.id}) }}">
+            <button type="button" class="btn bg-teal-400 btn-labeled pull-right">
+                <b><i class="icon-pencil3"></i></b> {{ 'liste.update'|trans }}
+            </button>
+        </a>
+    {% endif %}
 {% endblock %}
