refact list + add touch punch

--- a/src/BddBundle/Resources/views/Liste/edit.html.twig
+++ b/src/BddBundle/Resources/views/Liste/edit.html.twig
@@ -139,4 +139,5 @@
             addTagForm($collectionHolder, evt.params.data);
         });
     </script>
+    <script type="text/javascript" src="{{ asset('js/plugins/touch-punch/jquery.ui.touch-punch.min.js') }}"></script>
 {% endblock %}
