add list of listes

--- a/app/Resources/views/sidebar.html.twig
+++ b/app/Resources/views/sidebar.html.twig
@@ -26,6 +26,11 @@
                         </a>
                     </li>
                     <li>
+                        <a href="{{ path('liste_list') }}">
+                            <i class="icon-podium"></i> <span>{{ 'sidebar.liste'|trans }}</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://coastersworld.fr/">
                             <i class="icon-newspaper2"></i> <span>{{ 'sidebar.news'|trans }}</span>
                         </a>
