--- a/src/BddBundle/Resources/views/Liste/list.html.twig
+++ b/src/BddBundle/Resources/views/Liste/list.html.twig
@@ -4,4 +4,59 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
+    <div class="row">
+        {% for liste in listes if liste.listeCoasters|length > 2 %}
+            <div class="col-lg-4 col-sm-6">
+                <div class="thumbnail">
+                    <div class="caption">
+                        <div class="content-group-sm media">
+                            <div class="media-left">
+                                <img src="{{ liste.user.profilePicture }}"
+                                     class="img-circle img-xs"
+                                     alt="{{ liste.user.displayName }}">
+                            </div>
+                            <div class="media-body">
+                                <h6 class="text-semibold no-margin">
+                                    <a href="{{ path('liste_show', {'id': liste.id}) }}" class="text-default">
+                                        {{ liste.name }}
+                                    </a>
+                                </h6>
+                                <small class="text-muted">
+                                    {{ 'liste.list.by'|trans }}
+                                    <a href="#">{{ liste.user.displayName }}</a>
+                                </small>
+                            </div>
+                        </div>
+                        <ul class="list-feed">
+                            {% for listeCoaster in liste.listeCoasters|slice(0,3) %}
+                                <li>
+                                    {{ listeCoaster.position }} -
+                                    <a href="{{ path('bdd_show_coaster', {'slug': listeCoaster.coaster.slug}) }}"
+                                       class="text-default">
+                                        {{ listeCoaster.coaster.name }}
+                                    </a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <div style="margin-top:10px;">
+                            <a href="{{ path('liste_show', {'id': liste.id}) }}">
+                                <i class="icon-circle-right2"></i> {{ 'liste.list.more'|trans }}
+                            </a>
+                        </div>
+                    </div>
+                    <div class="panel-footer panel-footer-transparent">
+                        <div class="heading-elements">
+                            <ul class="list-inline list-inline-separate heading-text">
+                                <li><i class="icon-stack3 position-left"></i> {{ liste.listeCoasters|length }}</li>
+                                <li>
+                                    <i class="icon-alarm position-left"></i> {{ 'liste.list.updated'|trans }} {{ liste.updatedAt|ago }}
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
 {% endblock %}
+
