--- a/src/BddBundle/Resources/views/Default/index.html.twig
+++ b/src/BddBundle/Resources/views/Default/index.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
     <!-- info alert -->
+    {% if not is_granted('IS_AUTHENTICATED_REMEMBERED') %}
     <div class="alert alert-info alert-styled-left alert-arrow-left alert-component">
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span><span class="sr-only">Close</span>
         </button>
@@ -14,6 +15,7 @@
         </h6>
         {{ 'index.header.info'|trans({'%link_path%': path('hwi_oauth_connect')})|raw }}
     </div>
+    {% endif %}
     <!-- /info alert -->
     <div class="row">
         <div class="col-sm-12">
