--- a/src/BddBundle/Resources/views/Profile/ratings.html.twig
+++ b/src/BddBundle/Resources/views/Profile/ratings.html.twig
@@ -16,16 +16,21 @@
             $('.rating-coaster').rateit(
                 {max: 5, step: 0.5, resetable: false, mode: 'font'}
             ).bind('rated', function () {
-                var url = Routing.generate('rating_edit', {'id': this.dataset.coaster});
+                var url = Routing.generate(
+                    'rating_edit',
+                    {'id': this.dataset.coaster, '_locale': '{{ app.request.locale }}'}
+                );
 
                 $.post(url, {value: $(this).rateit('value')}, function (response) {
-                    console.log(response);
                 }, 'JSON');
             });
         });
 
         function deleteRating(id) {
-            var url = Routing.generate('rating_delete', {'id': id});
+            var url = Routing.generate(
+                'rating_delete',
+                {'id': id, '_locale': '{{ app.request.locale }}'}
+            );
             $.ajax({
                 url: url,
                 type: "DELETE",
